# Doom-Fuzz

./: .gitignore  README.md  doom-fuzz.dsp  index.html  package-lock.json  package.json  vite.config.js
doom-fuzz-plugin/: CMakeLists.txt
doom-fuzz-plugin/dsp/: CMakeLists.txt
doom-fuzz-plugin/dsp/include/doomfuzz/: Biquad.h  CabinetSim.h  DelayLine.h  DoomFuzzEngine.h  EnvelopeFollower.h  GainStage.h  NoiseGate.h  OctaveDown.h  Parameters.h  StereoWidth.h  ToneStack.h  VoltageSag.h
doom-fuzz-plugin/dsp/src/: Biquad.cpp  CabinetSim.cpp  DelayLine.cpp  DoomFuzzEngine.cpp  EnvelopeFollower.cpp  GainStage.cpp  NoiseGate.cpp  OctaveDown.cpp  StereoWidth.cpp  ToneStack.cpp  VoltageSag.cpp
doom-fuzz-plugin/plugin/: CMakeLists.txt  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
doom-fuzz-plugin/plugin/ui/: DoomFuzzLookAndFeel.cpp  DoomFuzzLookAndFeel.h  KnobComponent.cpp  KnobComponent.h  LevelMeterComponent.cpp  LevelMeterComponent.h
public/: doom-fuzz-processor.js
src/: App.jsx
src/components/: Knob.jsx  LevelMeter.jsx
src/hooks/: useAudioEngine.js
